[package]
name = "minecraft-protocol"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[features]
default = ["runtime_lookup"]
runtime_lookup = []

[dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
rand = "0.8.4"
tokio = { version = "1.14.0", features = ["full"] }

[build-dependencies]
convert_case = "0.4.0"
minecraft-data = {path = "../minecraft-data"}
