[package]
name = "minecraft-protocol"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

[features]
default = ["runtime_lookup"]
runtime_lookup = []

[dependencies]
byteorder = "1.4.3"
bytes = "1.1.0"
rand = "0.8.4"
serde = "1.0.132"
serde_json = "1.0.73"
tokio = { version = "1.14.0", features = ["full"] }
minecraft-data = { path = "../minecraft-data" }
proc-macro2 = "1.0.34"
lazy_static = "1.4.0"
indexmap = "1.7.0"
quote = "1.0.10"
protodef = { path = "../protodef" }

[build-dependencies]
convert_case = "0.4.0"
