[package]
name = "protodef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.5.0"
proc-macro2 = "1.0.37"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

[features]
